src/objects/Zephr_Company__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Zephr Companies</relationshipLabel>
        <relationshipName>Zephr_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_API_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://console.zephr.com/v3/companies/&apos;+ Zephr_Id__c, &apos;Open in Zephr&apos; , &apos;_blank&apos;)</formula>
        <label>Zephr API URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Id__c</fullName>
        <externalId>true</externalId>
        <label>Zephr Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Message__c</fullName>
        <label>Zephr Integration Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <label>Zephr Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Integration_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_Tenant__c</fullName>
        <description>Zephr tenant this Company is attached to</description>
        <inlineHelpText>Zephr tenant this Company is attached to</inlineHelpText>
        <label>Zephr Tenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Tenant</valueSetName>
        </valueSet>
    </fields>
    <label>Zephr Company</label>
    <nameField>
        <displayFormat>ZCO-{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zephr Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>